@@ -1,11 +1,11 @@
 
 use strict;
 
-use Test::More tests => 3;
+use Test::More tests => 6;
 
 use Sub::ForceEval;
 
-sub foo :ForceEval { 1 }
+sub foo :ForceEval { 'frobnicate' }
 
 my @stack = ( sub { foo } );
 
@@ -16,8 +16,20 @@ for( 1 .. 1024 )
   push @stack, sub { $prev->() };
 }
 
-my $first = $stack[0];
+my $first = $stack[ 0];
 
-ok eval { foo },          'Works in eval';
-ok eval { $first->() } ,  'Works in nested eval';
-ok foo,                   'Works without eval';
+my $a = foo;
+my $b = $stack[ 0]->();
+my $c = $stack[-1]->();
+
+ok $a eq 'frobnicate',    'Sub call returns expected result';
+ok $b eq $a,              'First stack Returns expected result';
+ok $c eq $a,              'Last stack Returns expected result';
+
+my $d = eval { foo };          
+my $e = eval { $first->() } ;
+my $f = foo;
+
+ok $d eq $a, 'Works in eval';
+ok $e eq $a, 'Works in nested eval';
+ok $f eq $a, 'Works without eval';
